unpackaged/main/default/objects/Statement__c/fields/RV_Cost_Tax_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>RV_Cost_Tax_Reciprocal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RV Cost Tax (Reciprocal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>