unpackaged/main/default/objects/Statement__c/fields/SC5500_Basic__c.field-meta.xml
<CustomField>
    <fullName>SC5500_Basic__c</fullName>
    <formula>Basic_Cost__c  +  Basic_Cost_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5500 (Basic)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>