unpackaged/main/default/objects/Statement__c/fields/SC5500_Basic_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>SC5500_Basic_Reciprocal__c</fullName>
    <formula>Basic_Cost_Reciprocal__c + Basic_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5500 (Basic Reciprocal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>