unpackaged/main/default/objects/Statement__c/fields/SC5500_Other_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>SC5500_Other_Reciprocal__c</fullName>
    <formula>Other_Cost_Reciprocal__c + Other_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5500 (Other Reciprocal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>