unpackaged/main/default/objects/Statement__c/fields/SC5680_Plus_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>SC5680_Plus_Reciprocal__c</fullName>
    <formula>Plus_Cost_Reciprocal__c + Plus_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5680 (Plus Reciprocal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>