unpackaged/main/default/objects/Statement__c/fields/SC5680_RV__c.field-meta.xml
<CustomField>
    <fullName>SC5680_RV__c</fullName>
    <formula>RV_Cost__c + RV_Cost_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5680 (RV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>