unpackaged/main/default/objects/Statement__c/fields/SC5760_Premier__c.field-meta.xml
<CustomField>
    <fullName>SC5760_Premier__c</fullName>
    <formula>Premier_Cost__c  +  Premier_Cost_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC5760 (Premier)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>