unpackaged/main/default/objects/Statement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Unreconciled</fullName>
                <default>true</default>
                <label>Unreconciled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>