unpackaged/main/default/objects/Statement__c/fields/Tier_2_Parent__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Parent__c</fullName>
    <formula>Service_Territory__r.ParentTerritory.Name</formula>
    <label>Tier 2 Parent</label>
    <type>Text</type>
</CustomField>