unpackaged/main/default/objects/Statement__c/fields/Total_Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Cost__c</fullName>
    <formula>Basic_Cost__c +  Basic_Cost_Adjustment__c +  Basic_Cost_Reciprocal__c +  Basic_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Basic Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>