unpackaged/main/default/objects/Statement__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Total_Basic_Cost__c +  Total_Plus_Cost__c +  Total_Premier_Cost__c +  Total_RV_Cost__c +  Total_Other_Cost__c + Total_Basic_Cost_Tax__c + Total_Other_Cost_Tax__c + Total_Plus_Cost_Tax__c + Total_Premier_Cost_Tax__c + Total_RV_Cost_Tax__c + Total_Credit__c - Total_Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Statement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>