unpackaged/main/default/objects/Statement__c/fields/Total_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit__c</fullName>
    <label>Total Debit</label>
    <summarizedField>Invoice__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Type__c</field>
        <operation>equals</operation>
        <value>Facility Adjustments</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Facility_Adjustment_Type__c</field>
        <operation>equals</operation>
        <value>Debit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Deferred</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>