unpackaged/main/default/objects/Statement__c/fields/Total_Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Cost__c</fullName>
    <formula>Other_Cost_ERS__c + Other_Cost_Adjustment__c + Other_Cost_Reciprocal_Adjustment__c + Other_Cost_Reciprocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>