unpackaged/main/default/objects/Statement__c/fields/Total_Other_Cost_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Cost_Tax__c</fullName>
    <formula>Other_Cost_Tax_Adjustment__c + Other_Cost_Tax_ERS__c + Other_Cost_Tax_Reciprocal__c + Other_Cost_Tax_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Cost Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>