unpackaged/main/default/objects/Statement__c/fields/Total_Plus_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Plus_Cost__c</fullName>
    <formula>Plus_Cost__c +  Plus_Cost_Adjustment__c + Plus_Cost_Reciprocal__c +   Plus_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Plus Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>