unpackaged/main/default/objects/Statement__c/fields/Total_Premier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Premier_Cost__c</fullName>
    <formula>Premier_Cost__c +  Premier_Cost_Adjustment__c +  Premier_Cost_Reciprocal__c +  Premier_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premier Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>