unpackaged/main/default/objects/Statement__c/fields/Total_RV_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_RV_Cost__c</fullName>
    <formula>RV_Cost__c +  RV_Cost_Adjustment__c +  RV_Cost_Reciprocal__c +  RV_Cost_Reciprocal_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RV Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>