unpackaged/main/default/objects/Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Group__c</columns>
    <columns>Status__c</columns>
    <columns>Processed__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Total_Debit__c</columns>
    <columns>Total_Credit__c</columns>
    <columns>Total_Basic_Cost__c</columns>
    <columns>Total_Basic_Cost_Tax__c</columns>
    <columns>Total_Plus_Cost__c</columns>
    <columns>Total_Premier_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Reconciled,Unreconciled</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>8/1/2024</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>CT,MA,NWJERSEY,RI,YORK</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>All_Administrators</group>
        <group>Back_Office_Group</group>
        <group>Delegated_Admin_Group</group>
        <group>Portal_Contract_Owners</group>
    </sharedTo>
</ListView>